# ocllama

./: Cargo.toml  LICENSE  README.md
src/: internals.rs  main.rs  ollama.rs
src/discord/: admin.rs  mod.rs  user.rs
